[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Towers/AttackShoot.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="AttackShoot" type="Node2D"]
script = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 1 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
